# morag

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  config.docker.yml  config.example.yml  docker-compose.yml  pyproject.toml  requirements.txt
cli/: main.py
examples/: claude_guide.md  llm_inside.md  llm_overview.md  natural_intelligence.md
scripts/: llm_demo.py  split_demo.py
services/embedder_frida/: Dockerfile  app.py  download_model.py  requirements.txt
services/embedder_gte/: Dockerfile  app.py  download_model.py  requirements.txt
services/pipeline/: Dockerfile  morag.py
src/morag/: config.py
src/morag/indexing/: chunker.py  context.py  embedder.py  pipeline.py  processors.py  splitter.py  token_counter.py
src/morag/llm/: client.py
src/morag/sources/: base.py  confluence.py  markdown.py
src/morag/storage/: collections.py  repository.py
tests/fixtures/docs/: changelog.md  overview.md
tests/fixtures/docs/api/: auth.md  endpoints.md
tests/indexing/: conftest.py  test_chunker.py  test_context.py  test_embedder.py  test_pipeline.py  test_processors.py  test_splitter.py  test_token_counter.py
tests/llm/: test_client.py
tests/sources/: test_confluence_source.py  test_markdown_source.py
tests/storage/: conftest.py  test_repository.py
